# hamming

./: .gitignore  CMakeLists.txt  README.md
hamming/: CMakeLists.txt
hamming/src/: hamming.cpp
hamming_test/: CMakeLists.txt
hamming_test/src/: hamming_test.cpp
libhamming/: CMakeLists.txt
libhamming/cmake/: hammingConfig.cmake
libhamming/include/hamming/: hamming.h  hamming.hpp  hamming_c.h
libhamming/include/hamming/internal/: popcount.h
libhamming/src/: hamming.cpp  popcount.cpp
